[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hucl"
dynamic = ["version"]
description = 'A simple client to initialise a JupyterHub server'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
]

[project.optional-dependencies]
async = [
  "aiohttp",
]
[dependency-groups]
test = ["pytest>7", "pytest-cov", "mypy"]

[project.urls]
Documentation = "https://github.com/Angus Hollands/hucl#readme"
Issues = "https://github.com/Angus Hollands/hucl/issues"
Source = "https://github.com/Angus Hollands/hucl"

[project.scripts]
hucl = "hucl.cli:hucl"

[tool.hatch.version]
path = "src/hucl/__about__.py"


[tool.coverage.run]
source_pkgs = ["hucl", "tests"]
branch = true
parallel = true
omit = [
  "src/hucl/__about__.py",
]

[tool.coverage.paths]
hucl = ["src/hucl", "*/hucl/src/hucl"]
tests = ["tests", "*/hucl/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
